# RAG_Project

./: .gitignore  pyproject.toml  requirements.txt
notebook/: document.ipynb
