[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.3",
    "pymupdf>=1.27.1",
    "pypdf>=6.8.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]
